<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_bkg">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:src="@drawable/round_remove"
        android:scaleType="centerCrop"
        android:layout_gravity="center|top"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:text="Добавьте свой рецепт"
            android:textSize="27dp"
            android:padding="8dp"
            android:textColor="@color/Blue"
            android:layout_marginStart="12dp"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/white"
            android:background="@drawable/clear_icon"
            android:id="@+id/cancelButton"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/rname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/border_edit_text"
            android:hint="@string/naming"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_edit_text"
            android:hint="@string/ingredients"
            android:padding="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/process"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/border_edit_text"
            android:hint="@string/process"
            android:padding="15dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:backgroundTint="@color/LiteBlue"
            android:text="@string/add"
            android:textColor="@color/black_blue" />
    </LinearLayout>
</LinearLayout>
